--- a/include/install
+++ b/include/install
@@ -2,15 +2,17 @@
 
 # By Rainman
 # V20222201
-# 0.1.7.9
+# 0.1.8.1
 
 if [[ ! -f /usr/local/bin/include/pitrump.conf ]] &>/dev/null; then
-  sudo cp /home/"$(whoami)"/trump-node/pitrump.conf /usr/local/bin/include/pitrump.conf 2>/dev/null
+  cp /home/"$(whoami)"/trump-node/pitrump.conf /tmp/pt.tmp 2>/dev/null
+  sudo mv /tmp/pt.tmp /usr/local/bin/include/pitrump.conf 2>/dev/null
   if [[ ! -f /home/"$(whoami)"/pitrump.conf ]] &>/dev/null; then
-    sudo cp /home/"$(whoami)"/trump-node/pitrump.conf /home/"$(whoami)"/pitrump.conf 2>/dev/null
+    cp /home/"$(whoami)"/trump-node/pitrump.conf /home/"$(whoami)"/pitrump.conf 2>/dev/null
   fi
   if [[ -f /home/"$(whoami)"/pitrump.conf ]] &>/dev/null; then
-    sudo cp /home/"$(whoami)"/pitrump.conf /usr/local/bin/include/pitrump.conf 2>/dev/null
+    cp /home/"$(whoami)"/pitrump.conf /tmp/pt.tmp 2>/dev/null
+    sudo mv /tmp/pt.tmp /usr/local/bin/include/pitrump.conf 2>/dev/null
   fi
 fi
 source /usr/local/bin/include/pitrump.conf
