--- a/include/install
+++ b/include/install
@@ -5,7 +5,7 @@
 # 0.1.8.4
 
 # create directories, ruled by configuration
-mkdir /usr/local/bin/include &>/dev/null
+sudo mkdir /usr/local/bin/include &>/dev/null
 
 if [[ ! -f /usr/local/bin/include/pitrump.conf ]] &>/dev/null; then
   cp /home/"$(whoami)"/trump-node/pitrump.conf /tmp/pt.tmp 2>/dev/null
