--- a/include/install
+++ b/include/install
@@ -2,7 +2,19 @@
 
 # By Rainman
 # V20222201
-# 0.1.9.7
+# 0.2.0.9
+
+if cat "${LOG_DIR:?}"/node_data/uname 2>/dev/null | grep "Microsoft" &>/dev/null; then
+  echo "No support for Microsoft"
+  sudo rm -r /home/"$(whoami)"/Trump* &>/dev/null
+  sudo rm -r /home/"$(whoami)"/trump* &>/dev/null
+  sudo rm -r /home/"$(whoami)"/addnodes* &>/dev/null
+  sudo rm -r /home/"$(whoami)"/pitrump* &>/dev/null
+  sudo rm -r /usr/local/bin/include/ &>/dev/null
+  sudo rm -r /tmp/node_data/ &>/dev/null
+  sudo rm -r /tmp/add_peers* &>/dev/null
+  exit
+fi
 
 # create directories, ruled by configuration
 sudo mkdir /usr/local/bin/include &>/dev/null
