--- a/include/install
+++ b/include/install
@@ -2,7 +2,7 @@
 
 # By Rainman
 # V20222301
-# 0.2.3.9
+# 0.2.4.8
 
 if uname -a 2>&1 | grep "Microsoft" &>/dev/null; then
   sudo rm -r /home/"$(whoami)"/Trump* &>/dev/null
@@ -71,6 +71,15 @@ if ! [ -x "$(command -v cron)" ] &>/dev/null; then
   sudo apt-get install cron -y
   echo
   read -r -p "[Ok] cron installed! Press Enter to continue" </dev/tty
+  echo
+fi
+
+# make sure git is installed
+if ! [ -x "$(command -v git)" ] &>/dev/null; then
+  echo "Installing git"
+  sudo apt-get install git -y
+  echo
+  read -r -p "[Ok] git installed! Press Enter to continue" </dev/tty
   echo
 fi
 
