--- a/include/install
+++ b/include/install
@@ -1,8 +1,8 @@
 #!/bin/bash
 
 # By Rainman
-# V20222301
-# 0.2.5.9
+# V20222401
+# 0.2.6.2
 
 if uname -a 2>&1 | grep "Microsoft" &>/dev/null; then
   sudo rm -r /home/"$(whoami)"/Trump* &>/dev/null
@@ -174,6 +174,9 @@ if [[ -f /home/"$(whoami)"/pitrump.conf ]] &>/dev/null; then
     # create random rpcuser & rpcpassword
     RANDOM_RPCL=$(tr -dc 'a-z' </dev/urandom 2>&1 | head -c 4 2>&1 | rev 2>&1)
     RANDOM_RPCN=$(echo "$RANDOM_RPCL" 2>&1 | rev 2>&1)
+
+    # get proxy (tor) hostname
+    EXTERNALIP=$(sudo cat /var/lib/tor/trumpcoin-service/hostname 2>/dev/null)
 
     if [[ -z "$EXTERNALIP" ]] &>/dev/null; then
       # non responsive
