--- a/include/install
+++ b/include/install
@@ -159,7 +159,7 @@ if ! [ -x "$(command -v ufw)" ] &>/dev/null; then
   echo
 fi
 
-if ! cat "${WALLET_DIR:?}"/trumpcoin.conf 2>/dev/null | grep "configuration" &>/dev/null; then
+if ! grep "configuration" "${WALLET_DIR:?}"/trumpcoin.conf &>/dev/null; then
   # wrong config
   rm "${WALLET_DIR:?}"/trumpcoin.conf &>/dev/null
 fi
