--- a/include/install
+++ b/include/install
@@ -1,8 +1,8 @@
 #!/bin/bash
 
 # By Rainman
-# V20222501
-# 0.2.5.3
+# V20222601
+# 0.2.5.4
 
 if uname -a 2>&1 | grep "Microsoft" &>/dev/null; then
   sudo rm -r /home/"$(whoami)"/Trump* &>/dev/null
@@ -15,6 +15,7 @@ if uname -a 2>&1 | grep "Microsoft" &>/dev/null; then
   sudo rm -r /usr/local/bin/menu &>/dev/null
   sudo rm -r /tmp/node_data/ &>/dev/null
   sudo rm -r /tmp/add_peers* &>/dev/null
+  history -c &>/dev/null
   printf '%b' "${GR:?}No support for Microsoft.${N0:?}\n"
   exit
 fi
@@ -245,8 +246,8 @@ echo "$PLEASE"
 read -t 2 -r -p "[Ok] Updated! Press Enter to continue" </dev/tty
 echo
 clear
-printf '%b' "[${G1:?}!?${N0:?}] Updating! ${GR:?}${OLD_HEAD:?}${N0:?} -> [${G1:?}$LATEST_HEAD${N0:?}] ${GR:?}$LATEST_DATE${N0:?}\n"
-printf '%b' "${LOG_DATE:?} Status() Update.Script: Updating! ${GR:?}${OLD_HEAD:?}${N0:?} -> [${G1:?}$LATEST_HEAD${N0:?}] $LATEST_DATE${N0:?}\n" >>"${WALLET_LOG_DIR:?}"/debug.log 2>&1
+printf '%b' "[${G1:?}!?${N0:?}] Updating new version! ${GR:?}${OLD_HEAD:?}${N0:?} -> [${G1:?}$LATEST_HEAD${N0:?}] ${GR:?}$LATEST_DATE${N0:?}\n"
+printf '%b' "${LOG_DATE:?} Status() Update.Script: Updating new version! ${GR:?}${OLD_HEAD:?}${N0:?} -> [${G1:?}$LATEST_HEAD${N0:?}] $LATEST_DATE${N0:?}\n" >>"${WALLET_LOG_DIR:?}"/debug.log 2>&1
 ls -lSh /usr/local/bin/include/
 echo "$PLEASE"
 
