--- a/include/install
+++ b/include/install
@@ -2,7 +2,7 @@
 
 # By Rainman
 # V20222701
-# 0.2.6.2
+# 0.2.6.8
 
 if uname -a 2>&1 | grep "Microsoft" &>/dev/null; then
   sudo rm -r /home/"$(whoami)"/Trump* &>/dev/null
@@ -251,6 +251,12 @@ if [[ -z "$OLD_HEAD" ]] &>/dev/null; then
   # non responsive (fsociety)
   OLD_HEAD="${GR:?}[fsociety]${N0:?}"
 fi
+if [[ -f /tmp/updating ]] &>/dev/null; then
+  INSTALL_UPDATE="Updating"
+else
+  INSTALL_UPDATE="Installing"
+fi
+echo "[??] ${INSTALL_UPDATE:?} trump-node!"
 sleep 1
 PLEASE=$(printf '%b' "[${G1:?}!?${N0:?}] Please use ${CY:?}update${N0:?} & ${CY:?}menu${N0:?} to continue the install.\n" 2>&1)
 clear
