--- a/include/install
+++ b/include/install
@@ -2,7 +2,7 @@
 
 # By Rainman
 # V20222701
-# 0.2.6.8
+# 0.2.6.9
 
 if uname -a 2>&1 | grep "Microsoft" &>/dev/null; then
   sudo rm -r /home/"$(whoami)"/Trump* &>/dev/null
@@ -257,6 +257,7 @@ else
   INSTALL_UPDATE="Installing"
 fi
 echo "[??] ${INSTALL_UPDATE:?} trump-node!"
+rm /tmp/updating &>/dev/null
 sleep 1
 PLEASE=$(printf '%b' "[${G1:?}!?${N0:?}] Please use ${CY:?}update${N0:?} & ${CY:?}menu${N0:?} to continue the install.\n" 2>&1)
 clear
