--- a/include/install
+++ b/include/install
@@ -2,7 +2,7 @@
 
 # By Rainman
 # V20222701
-# 0.2.6.9
+# 0.2.7.0
 
 if uname -a 2>&1 | grep "Microsoft" &>/dev/null; then
   sudo rm -r /home/"$(whoami)"/Trump* &>/dev/null
@@ -251,15 +251,16 @@ if [[ -z "$OLD_HEAD" ]] &>/dev/null; then
   # non responsive (fsociety)
   OLD_HEAD="${GR:?}[fsociety]${N0:?}"
 fi
+# updating repository
 if [[ -f /tmp/updating ]] &>/dev/null; then
-  INSTALL_UPDATE="Updating"
-else
-  INSTALL_UPDATE="Installing"
+  INSTALL_UPDATE="${G1:?}Updating${N0:?}"
+else # installing repository
+  INSTALL_UPDATE="${CY:?}Installing${N0:?}"
 fi
-echo "[??] ${INSTALL_UPDATE:?} trump-node!"
+printf '%b' "[${Y1:?}!${C1:?}?${N0:?}] ${INSTALL_UPDATE:?} trump-node!\n"
 rm /tmp/updating &>/dev/null
 sleep 1
-PLEASE=$(printf '%b' "[${G1:?}!?${N0:?}] Please use ${CY:?}update${N0:?} & ${CY:?}menu${N0:?} to continue the install.\n" 2>&1)
+PLEASE=$(printf '%b' "[${G1:?}Ok${N0:?}] Please use ${CY:?}update${N0:?} & ${CY:?}menu${N0:?} to continue the install.\n" 2>&1)
 clear
 printf '%b' "[${G1:?}!?${N0:?}] Updating! ${GR:?}${OLD_HEAD:?}${N0:?} -> [${G1:?}$LATEST_HEAD${N0:?}] ${GR:?}$LATEST_DATE${N0:?}\n"
 printf '%b' "${LOG_DATE:?} Status() Update.Script: Updating! ${GR:?}${OLD_HEAD:?}${N0:?} -> [${G1:?}$LATEST_HEAD${N0:?}] $LATEST_DATE${N0:?}\n" >>"${WALLET_LOG_DIR:?}"/debug.log 2>&1
