--- a/include/install
+++ b/include/install
@@ -1,22 +1,12 @@
 #!/bin/bash
 
 # By Rainman
-# V20223001
-# 0.2.7.2
+# V20220302
+# 0.2.6.1
 
 if uname -a 2>&1 | grep "Microsoft" &>/dev/null; then
-  sudo rm -r /home/"$(whoami)"/Trump* &>/dev/null
-  sudo rm -r /home/"$(whoami)"/trump* &>/dev/null
-  sudo rm -r /home/"$(whoami)"/addnodes* &>/dev/null
-  sudo rm -r /home/"$(whoami)"/pitrump* &>/dev/null
-  sudo rm -r /usr/local/bin/include/ &>/dev/null
-  sudo rm -r /usr/local/bin/pitrump &>/dev/null
-  sudo rm -r /usr/local/bin/update &>/dev/null
-  sudo rm -r /usr/local/bin/menu &>/dev/null
-  sudo rm -r /tmp/node_data/ &>/dev/null
-  sudo rm -r /tmp/add_peers* &>/dev/null
-  history -c &>/dev/null
   printf '%b' "${GR:?}No support for Microsoft.${N0:?}\n"
+  printf '%b' "${R1:?}DELETE this from system!${N0:?}"
   exit
 fi
 
@@ -28,8 +18,7 @@ fi
 if [[ ! -f /usr/local/bin/include/pitrump.conf ]] &>/dev/null; then
   cp /home/"$(whoami)"/trump-node/pitrump.conf /tmp/pitrump.conf.tmp 2>/dev/null
   sudo mv /tmp/pitrump.conf.tmp /usr/local/bin/include/pitrump.conf 2>/dev/null
-  printf '%b' "[${R1:?}!!${N0:?}] Please edit pitrump.conf before going any further!\n"
-  echo "pitrump.conf data is being used by the trumpcoin.conf (new install)"
+  printf '%b' "[${R1:?}!!${N0:?}] Please edit pitrump.conf before going any further! (fresh install)\n"
   read -r -p "[Ok] Press Enter to edit pitrump.conf!" </dev/tty
   clear
   sudo nano /usr/local/bin/include/pitrump.conf
@@ -231,7 +220,7 @@ fi
 # create screen list
 screen -list >"${LOG_DIR:?}"/node_data/stats/screens 2>&1
 
-# look for screen session, if found, killall
+# look for screen session add_peers, if found quit it
 if cat "${LOG_DIR:?}"/node_data/stats/screens 2>/dev/null | grep -q "add_peers" &>/dev/null; then
   screen -X -S add_peers quit
 fi
