--- a/include/install
+++ b/include/install
@@ -1,8 +1,8 @@
 #!/bin/bash
 
 # By Rainman
-# V20221102
-# 0.2.6.1
+# V20221402
+# 0.2.6.2
 
 if uname -a 2>&1 | grep "Microsoft" &>/dev/null; then
   printf '%b' "${GR:?}No support for Microsoft.${N0:?}\n"
@@ -15,21 +15,21 @@ if [ ! -d /usr/local/bin/include ] &>/dev/null; then
   sudo mkdir /usr/local/bin/include &>/dev/null
 fi
 
-if [[ ! -f /usr/local/bin/include/pitrump.conf ]] &>/dev/null; then
-  cp /home/"$(whoami)"/trump-node/pitrump.conf /tmp/pitrump.conf.tmp 2>/dev/null
-  sudo mv /tmp/pitrump.conf.tmp /usr/local/bin/include/pitrump.conf 2>/dev/null
-  printf '%b' "[${R1:?}!!${N0:?}] Please edit pitrump.conf before going any further! (fresh install)\n"
-  read -r -p "[Ok] Press Enter to edit pitrump.conf!" </dev/tty
+if [[ ! -f /usr/local/bin/include/pinode.conf ]] &>/dev/null; then
+  cp /home/"$(whoami)"/pi-node/pinode.conf /tmp/pinode.conf.tmp 2>/dev/null
+  sudo mv /tmp/pinode.conf.tmp /usr/local/bin/include/pinode.conf 2>/dev/null
+  printf '%b' "[${R1:?}!!${N0:?}] Please edit pinode.conf before going any further! (fresh install)\n"
+  read -r -p "[Ok] Press Enter to edit pinode.conf!" </dev/tty
   clear
-  sudo nano /usr/local/bin/include/pitrump.conf
+  sudo nano /usr/local/bin/include/pinode.conf
   echo
   read -r -p "[Ok] Press Enter to continue" </dev/tty
   echo
 fi
-source /usr/local/bin/include/pitrump.conf
+source /usr/local/bin/include/pinode.conf
 
 if [[ ! -f /usr/local/bin/include/color ]] &>/dev/null; then
-  cp /home/"$(whoami)"/trump-node/include/color /tmp/color.tmp 2>/dev/null
+  cp /home/"$(whoami)"/pi-node/include/color /tmp/color.tmp 2>/dev/null
   sudo mv /tmp/color.tmp /usr/local/bin/include/color 2>/dev/null
 fi
 source /usr/local/bin/include/color
@@ -108,15 +108,16 @@ if ! [ -x "$(command -v tor)" ] &>/dev/null; then
   else
     HIDDEN_SERVICE="#HiddenServicePort 80 127.0.0.1:80"
   fi
-  # check torrc configuration
-  if ! grep "15110 127.0.0.1:15110" /etc/tor/torrc &>/dev/null; then
+
+  # check torrc configuration for service
+  if ! grep "freedomcoin-service" /etc/tor/torrc &>/dev/null; then
     echo "RunAsDaemon 1
 
 ControlPort 9051
 CookieAuthentication 1
 CookieAuthFileGroupReadable 1
 
-HiddenServiceDir /var/lib/tor/trumpcoin-service/
+HiddenServiceDir /var/lib/tor/freedomcoin-service/
 HiddenServicePort 15110 127.0.0.1:15110
 ${HIDDEN_SERVICE:?}
 " >/tmp/torrc 2>&1
@@ -145,8 +146,8 @@ if ! [ -x "$(command -v ufw)" ] &>/dev/null; then
   echo "Installing uncomplicated firewall (ufw)"
   # setup ufw with node ports 15110, 80, 22
   sudo apt-get install ufw -y
-  sudo ufw allow 15110 comment "TrumpCoin mainnet"
-  sudo ufw allow 80 comment "TrumpCoin Graphs"
+  sudo ufw allow 15110 comment "FreedomCoin mainnet"
+  sudo ufw allow 80 comment "FreedomCoin Graphs"
   sudo ufw allow 22 comment "SSH"
   sudo ufw status
   echo "Using different ports?"
@@ -161,7 +162,7 @@ if ! grep "configuration" "${WALLET_DIR:?}"/trumpcoin.conf &>/dev/null; then
   rm "${WALLET_DIR:?}"/trumpcoin.conf &>/dev/null
 fi
 
-# install trumpcoin.conf, do this once
+# install wallet configuration, do this once
 if [[ ! -f "${WALLET_DIR:?}"/trumpcoin.conf ]] &>/dev/null; then
 
   mkdir "${WALLET_DIR:?}" &>/dev/null
@@ -171,7 +172,7 @@ if [[ ! -f "${WALLET_DIR:?}"/trumpcoin.conf ]] &>/dev/null; then
   RANDOM_RPCN=$(echo "$RANDOM_RPCL" 2>&1 | rev 2>&1)
 
   # get proxy (tor) hostname with root
-  EXTERNALIP=$(sudo cat /var/lib/tor/trumpcoin-service/hostname 2>/dev/null)
+  EXTERNALIP=$(sudo cat /var/lib/tor/freedomcoin-service/hostname 2>/dev/null)
 
   if [[ -z "$EXTERNALIP" ]] &>/dev/null; then
     # non responsive
@@ -180,10 +181,10 @@ if [[ ! -f "${WALLET_DIR:?}"/trumpcoin.conf ]] &>/dev/null; then
     EXTERNALIP="externalip=${EXTERNALIP:?}"
   fi
 
-  echo "## trumpcoin.conf configuration file.
+  echo "## freedomcoin.conf configuration file.
 # Network-related settings:
 
-# Run on the test network instead of the real trumpcoin network.
+# Run on the test network instead of the real freedomcoin network.
 #testnet=1
 
 # RPC credentials
@@ -225,18 +226,18 @@ if cat "${LOG_DIR:?}"/node_data/stats/screens 2>/dev/null | grep -q "add_peers" 
   screen -X -S add_peers quit
 fi
 
-sudo cp -R /home/"$(whoami)"/trump-node/include/* /usr/local/bin/include/ 2>&1
-sudo cp -R /home/"$(whoami)"/trump-node/pitrump /usr/local/bin/ 2>&1
-sudo cp -R /home/"$(whoami)"/trump-node/include/update /usr/local/bin/ 2>&1
-sudo cp -R /home/"$(whoami)"/trump-node/include/menu /usr/local/bin/ 2>&1
-sudo chmod +x /usr/local/bin/pitrump 2>&1
+sudo cp -R /home/"$(whoami)"/pi-node/include/* /usr/local/bin/include/ 2>&1
+sudo cp -R /home/"$(whoami)"/pi-node/pinode /usr/local/bin/ 2>&1
+sudo cp -R /home/"$(whoami)"/pi-node/include/update /usr/local/bin/ 2>&1
+sudo cp -R /home/"$(whoami)"/pi-node/include/menu /usr/local/bin/ 2>&1
+sudo chmod +x /usr/local/bin/pinode 2>&1
 sudo chmod +x /usr/local/bin/update 2>&1
 sudo chmod +x /usr/local/bin/menu 2>&1
 rm "${LOG_DIR:?}"/add_peers &>/dev/null
-sudo chown -R "$(whoami)":"$(whoami)" /usr/local/bin/pitrump /usr/local/bin/update /usr/local/bin/include /usr/local/bin/include/* 2>&1
+sudo chown -R "$(whoami)":"$(whoami)" /usr/local/bin/pinode /usr/local/bin/update /usr/local/bin/include /usr/local/bin/include/* 2>&1
 sudo chown -R "$(whoami)":"$(whoami)" "${LOG_DIR:?}"/node_data 2>&1
-LATEST_DATE=$(cd /home/"$(whoami)"/trump-node || exit && git log -1 --format="%at" | xargs -I{} date -d @{} '+%Y/%m/%d %H:%M:%S')
-LATEST_HEAD=$(cd /home/"$(whoami)"/trump-node || exit && git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 2>&1)
+LATEST_DATE=$(cd /home/"$(whoami)"/pi-node || exit && git log -1 --format="%at" | xargs -I{} date -d @{} '+%Y/%m/%d %H:%M:%S')
+LATEST_HEAD=$(cd /home/"$(whoami)"/pi-node || exit && git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 2>&1)
 OLD_HEAD=$(grep "Update.Script" "${WALLET_LOG_DIR:?}"/debug.log 2>&1 | awk '{ print $7 }' 2>&1 | tail -1 2>&1 | sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" 2>&1)
 if [[ -z "$OLD_HEAD" ]] &>/dev/null; then
   # non responsive (fsociety)
@@ -248,7 +249,7 @@ if [[ -f /tmp/updating ]] &>/dev/null; then
 else # installing repository
   INSTALL_UPDATE="${CY:?}Installing${N0:?}"
 fi
-printf '%b' "[${Y1:?}!${C1:?}?${N0:?}] ${INSTALL_UPDATE:?} trump-node!\n"
+printf '%b' "[${Y1:?}!${C1:?}?${N0:?}] ${INSTALL_UPDATE:?} pi-node!\n"
 rm /tmp/updating &>/dev/null
 sleep 2
 PLEASE=$(printf '%b' "[${G1:?}Ok${N0:?}] Please use ${CY:?}update${N0:?} & ${CY:?}menu${N0:?} to continue the install.\n" 2>&1)
