--- a/include/install
+++ b/include/install
@@ -1,8 +1,8 @@
 #!/bin/bash
 
 # By Rainman
-# V20222002
-# 0.2.9.1
+# V20222102
+# 0.3.0.4
 
 # create directories, ruled by configuration
 if [ ! -d /usr/local/bin/include ] &>/dev/null; then
@@ -259,29 +259,42 @@ sudo cp -R /home/"$(whoami)"/pi-node/include/* /usr/local/bin/include/ 2>&1
 sudo cp -R /home/"$(whoami)"/pi-node/pinode /usr/local/bin/ 2>&1
 sudo cp -R /home/"$(whoami)"/pi-node/include/update /usr/local/bin/ 2>&1
 sudo cp -R /home/"$(whoami)"/pi-node/include/menu /usr/local/bin/ 2>&1
+
 sudo chmod +x /usr/local/bin/pinode 2>&1
 sudo chmod +x /usr/local/bin/update 2>&1
 sudo chmod +x /usr/local/bin/menu 2>&1
+
 rm "${LOG_DIR:?}"/add_peers &>/dev/null
+
 sudo chown -R "$(whoami)":"$(whoami)" /usr/local/bin/pinode /usr/local/bin/update /usr/local/bin/include /usr/local/bin/include/* 2>&1
 sudo chown -R "$(whoami)":"$(whoami)" "${LOG_DIR:?}"/node_data 2>&1
-LATEST_DATE=$(cd /home/"$(whoami)"/pi-node || exit && git log -1 --format="%at" | xargs -I{} date -d @{} '+%Y/%m/%d %H:%M:%S')
-LATEST_HEAD=$(cd /home/"$(whoami)"/pi-node || exit && git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 2>&1)
+
+cd /home/"$(whoami)"/pi-node || exit && git log -1 --format="%at" | xargs -I{} date -d @{} '+%Y/%m/%d %H:%M:%S' >"${LOG_DIR:?}"/node_data/repo 2>&1
+cd /home/"$(whoami)"/pi-node || exit && git rev-parse --short HEAD 2>&1 | grep -Eo '[a0-z9]{7}' 2>&1 | head -1 >>"${LOG_DIR:?}"/node_data/repo 2>&1
+
+LATEST_DATE=$(head -1 "${LOG_DIR:?}"/node_data/repo 2>&1)
+LATEST_HEAD=$(tail -1 "${LOG_DIR:?}"/node_data/repo 2>&1)
+
 OLD_HEAD=$(grep "Update.Script" "${WALLET_LOG_DIR:?}"/debug.log 2>&1 | awk '{ print $7 }' 2>&1 | tail -1 2>&1 | sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" 2>&1)
+
 if [[ -z "$OLD_HEAD" ]] &>/dev/null; then
   # non responsive (fsociety)
   OLD_HEAD="${GR:?}[fsociety]${N0:?}"
 fi
+
 # updating repository
 if [[ -f /tmp/updating ]] &>/dev/null; then
   INSTALL_UPDATE="${G1:?}Updating${N0:?}"
 else # installing repository
   INSTALL_UPDATE="${CY:?}Installing${N0:?}"
 fi
+
 printf '%b' "[${Y1:?}!${C1:?}?${N0:?}] ${INSTALL_UPDATE:?} pi-node!\n"
 rm /tmp/updating &>/dev/null
 sleep 2
+
 PLEASE=$(printf '%b' "[${G1:?}Ok${N0:?}] Please use ${CY:?}update${N0:?} & ${CY:?}menu${N0:?} to continue the install.\n" 2>&1)
+
 clear
 printf '%b' "[${G1:?}Ok${N0:?}] Updating! ${GR:?}${OLD_HEAD:?}${N0:?} -> [${G1:?}$LATEST_HEAD${N0:?}] ${GR:?}$LATEST_DATE${N0:?}\n"
 printf '%b' "${LOG_DATE:?} Status() Update.Script: Updating! ${GR:?}${OLD_HEAD:?}${N0:?} -> [${G1:?}$LATEST_HEAD${N0:?}] $LATEST_DATE${N0:?}\n" >>"${WALLET_LOG_DIR:?}"/debug.log 2>&1
